
2006-12-11 cjg
 * Friendly error for owner of eprint on denied screens.

2006-12-11 cjg
 * Added generate_static, import_subjects and generate_apacheconf to 
    epadmin create and erase_data

2006-12-11 moj
 * Added maxdelta to password change mail_sent phrase
 * Changed confirmation email to put link around 'active password'.

2006-12-11 moj
 * Fixed 'to name' in RequestDeletion email (was not being converted
    from DOM to string).

2006-12-11 moj
 * Updated RequestDeletion to use the nicer mail format, and reworded
    email to avoid 'click here'.

2006-12-11 cjg
 * Changed cookies to expire on browser close.
 * Improved style of search field titles in editorial scope select
 * Added pretty styles to Import screen.
 * Changed eprint_render to call null action on request copy screen.

2006-12-11 cjg
 * Added Readonly.pm

2006-12-11 cjg
 * Abstract search now does not abort on bad plugin in redirect substage.

2006-12-11 cjg
 * Now removes expired login tickets.

2006-12-11 cjg 
 * Fixed bug in "next" search results 
 * List was leaving stray caches around. Fixed.
 * NULL dir field in EPrint now causes abort: it's too serious for just a 
    warning.

2006-12-12 moj
 * Shifted time/date-related functions from Utils to Time.
 * Added moved functions to BackCompatibility
 * Searched/Replaced any functions that were moved and updated to 
    Time.

2006-12-12 moj
 * Added help for corp authors

2006-12-12 moj
 * Removed a '!' and fixed the required fields bug

2006-12-12 cjg
 * Added Subject::Edit
 * Fixed bug in filtered searches when searchfields were being OR'd so 
    were filters. Which was bad.
 * Multilang subjects now don't spew warnings to log if they have undefined
    languages (although there should be a validation issue)
 * Added more code to keep abstract search from spewing warnings when it
    gets odd params.
 * Added subject editor to admin options.

2006-12-12 cjg
 * Added hook on files modified.
