@@ -1207,6 +1207,7 @@ Titles and Help for the System Fields
     <epp:phrase id="Plugin/Screen/Subject/Edit:removed">Removed subject. This subject node has been deleted.</epp:phrase>
     <epp:phrase id="Plugin/Screen/Subject/Edit:added">Created new subject node with ID "<epc:pin name="newchild" />". Please now enter a subject name and set the subject to be depositable, if applicable.</epp:phrase>
     <epp:phrase id="Plugin/Screen/Subject/Edit:linked">Linked the existing subject node "<epc:pin name="newchild" />" as a child of this subject node.</epp:phrase>
+    <epp:phrase id="Plugin/Screen/Subject/Edit:description">Modify the subject tree(s)</epp:phrase>
 
 
     <!-- other screens -->
